# makielskisbot-android

./: .gitignore  .gitmodules  .project  AndroidManifest.xml  CMakeLists.txt  README.md  ant.properties  keystore
build_tools/: build.sh  prepare.sh
jni/: Android.mk
jni/libs/: Android.mk
res/layout/: activity_main.xml
res/values/: strings.xml
res/values-v8/: styles.xml
src/net/makielski/botscript/: BotscriptServer.java
src/net/makielski/botscriptservice/: BotService.java  MainActivity.java
